WIP (card 3d tilt effect) : trying a few different things here
No real results

--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,7 @@
 
 <body data-sveltekit-preload-data="hover">
 	<div style="display: contents">%sveltekit.body%</div>
+	<script src="vanilla-tilt.js"></script>
 </body>
 
 </html>
